# hyperliquid-playground

./: Dockerfile  ReadMe.md
hyperliquid-spike/: Cargo.toml
hyperliquid-spike/doc/: InfoClient.md  architecture.md  bdd_sceanrious.md  hyperliquid-useful-info.md  requirements.md
hyperliquid-spike/src/: errors.rs  hyperliquid_orderbook.rs  index_extractor.rs  main.rs
hyperliquid-spike/src/__fixtures__/: mod.rs  orderbook_fixtures.rs
hyperliquid-spike/src/hyperliquid_info_client/: hyper_liquid_websocket.rs  hyperliquid_api_client.rs  hyperliquid_orderbook.rs  hyperliquid_types.rs  mod.rs
websocket_and_http_server/: Cargo.toml
