[package]
name = "hyperliquid-spike"
version = "0.1.0"
edition = "2021"

[dependencies]
connector-model = { package = "connector-model", git = "ssh://git@github.com/defiborg/connector-commons.git" }
tokio = "1.43.0"
reqwest = "0.11.18"
ethers = "2.0.14"
hyperliquid_rust_sdk = {path = "../hyperliquid-rust-sdk-patch" }
serde_json = "1.0.138"

